# rust-database-postgres-diesel

./: .env  Cargo.toml  docker-compose.yml  init.sql  readme.org
.github/workflows/: build.yml
migrations/00000000000001_create_persons/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
