[package]
name = "rust_database_postgres_diesel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"

[[bin]]
name = "show_persons"
doc = false

[[bin]]
name = "add_persons"
doc = false

[lib]
doc = false